feat(members): Обновление мемберов
