# docs/swagger.json
@@ -44,7 +44,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Members"
+                    "Auth"
                 ],
                 "summary": "Login a member",
                 "parameters": [
@@ -87,7 +87,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Members"
+                    "Auth"
                 ],
                 "summary": "Registration a member",
                 "parameters": [
@@ -187,6 +187,54 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/dto.TotpRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/components.BaseHttpResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Failed",
+                        "schema": {
+                            "$ref": "#/definitions/components.BaseHttpResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Failed",
+                        "schema": {
+                            "$ref": "#/definitions/components.BaseHttpResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/members/update": {
+            "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
+                "description": "Update a member",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Members"
+                ],
+                "summary": "Update a member",
+                "parameters": [
+                    {
+                        "description": "member",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.MemberUpdate"
                         }
                     }
                 ],
@@ -482,6 +530,29 @@
                 }
             }
         },
+        "dto.MemberUpdate": {
+            "type": "object",
+            "properties": {
+                "birthday": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "location": {
+                    "$ref": "#/definitions/models.MemberLocation"
+                },
+                "middleName": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.Role": {
             "type": "object",
             "properties": {
@@ -524,6 +595,23 @@
                 "issuer": {
                     "type": "string",
                     "example": "comecord.com"
+                }
+            }
+        },
+        "models.MemberLocation": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "postcode": {
+                    "type": "string"
                 }
             }
         },
